--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
     "sass-embedded": "^1.86.3",
-    "vite": "^6.3.0"
+    "vite": "^6.3.0",
+    "vite-plugin-vue-devtools": "^7.7.5"
   }
 }
